Fixed newfeed clipping into wordclocks
2 months later, 3 lines of code. Yeppers.

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,14 @@
 .worldtime {
-  display:flex;
-  flex-direction:row;
+  display: flex;
+  flex-direction: row;
 }
 
-.world{
-  width:100%;
+.world {
+  width: 100%;
   min-width: 140px;
   margin-right: 15px;
 }
 
-
+.newsfeed-title {
+  width: 50vw;
+}
